[package]
name = "smart_ghar_backend_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
diesel = { version = "2.1.2", features = ["postgres"] }
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
regex = "1.9.6"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
validator = { version = "0.16.1", features = ["derive"] }
